Fix navbar anchor tags wrapping

--- a/Dev/client/src/style.css
+++ b/Dev/client/src/style.css
@@ -50,6 +50,11 @@ body {
   transition: 0.5s; 
 }
 
+.navbar a {
+    display:block;
+    text-wrap: nowrap;
+}
+
 .opened {
   display: flex;
   padding-left: 16px; 
